Made some progress of chapter 1

--- a/Survey Statistics/course.yml
+++ b/Survey Statistics/course.yml
@@ -1,4 +1,4 @@
-title: Insert the course title here
-author_field: The author(s) name(s)
-description: Insert course description here
+title: Intro to Survey Statistics
+author_field: Carl Ganz based on the text of Thomas Lumley
+description: An introduction to Survey Statistics based on Thomas Lumley's Complex Surveys: A guide to Analysis Using R.
 
