Touched up some things

--- a/Survey Statistics/course.yml
+++ b/Survey Statistics/course.yml
@@ -1,4 +1,4 @@
-title: Survey Statistics in R
+title: Survey Statistics with R
 author_field: Carl Ganz based on the text of Thomas Lumley
-description: An introduction to Survey Statistics based on Thomas Lumley's Complex Surveys: A guide to Analysis Using R.
+description: An introduction to Survey Statistics based on Thomas Lumley's *Complex Surveys: A guide to Analysis Using R*.
 
